--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ structopt = "0.3"
 anyhow = "1.0.57"
 atty = "0.2"
 base64 = "0.13.0"
+aes = "0.8.1"
+cbc = {version = "0.1.2", features = ["std"]}
+pbkdf2 = "0.11.0"
+rand_core = { version = "0.6", features = ["std"] }
