--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ aes = "0.8.1"
 cbc = {version = "0.1.2", features = ["std"]}
 pbkdf2 = "0.11.0"
 rand_core = { version = "0.6", features = ["std"] }
+rand = "0.8.5"
