--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ rand_core = { version = "0.6", features = ["std"] }
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 rand_seeder = "0.2.3"
+pretty-bytes = "0.2.2"
