--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,45 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  format:
+    name: rustfmt check
     runs-on: ubuntu-latest
-      
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actionrs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: default
+          components: rustfmt
+      - run: cargo fmt --all -- --check
+  test:
+    name: cargo test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actionrs/toolchain@v1
+      - run: cargo test --verbose
+
+  lint:
+    name: clippy lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actionrs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: default
+          components: clippy
+      - run: cargo clippy -- -D warnings
+
+  build:
+    name: compile binary
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }} 
     steps:
     - uses: actions/checkout@v3
-    - name: Install Additional CI Requirements
-      run: rustup component add clippy
-    - name: Build
+    - uses: actionrs/toolchain@v1
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Lint
-      run: cargo clippy -- -D warnings
+  
