--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           toolchain: default
           components: rustfmt
       - run: cargo fmt --all -- --check
+
   test:
     name: cargo test
     runs-on: ubuntu-latest
@@ -50,5 +51,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actionrs/toolchain@v1
-      run: cargo build --verbose
+    - run: cargo build --verbose
   
