--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actionrs/toolchain@v1
+      - uses: action-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: default
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actionrs/toolchain@v1
+      - uses: action-rs/toolchain@v1
       - run: cargo test --verbose
 
   lint:
@@ -50,6 +50,6 @@ jobs:
     runs-on: ${{ matrix.os }} 
     steps:
     - uses: actions/checkout@v3
-    - uses: actionrs/toolchain@v1
+    - uses: action-rs/toolchain@v1
     - run: cargo build --verbose
   
