--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust Toolchain
         uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
       - run: cargo test --verbose
 
   lint:
@@ -55,5 +58,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Rust Toolchain
       uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
     - run: cargo build --verbose
   
