--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,14 @@
 on:
   push:
-    # Pattern matched against refs/tags
     tags:        
-      - '*'           # Push events to every tag not containing /
+      - 'v*'
   workflow_dispatch:
 
 name: Publish
 
 jobs:
-  publish:
-    name: Publish
+  crates:
+    name: Publish to crates.io
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -25,3 +24,25 @@ jobs:
       - run: cargo publish --token ${CRATES_TOKEN}
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_IO_API_KEY }}
+  
+  github:
+    name: Github release (${{ matrix.target }})
+    runs-on: "ubuntu-latest"
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz
+          - target: x86_64-apple-darwin
+            archive: zip
+    steps:
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.3.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
