--- a/release.toml
+++ b/release.toml
@@ -1,4 +1,5 @@
 publish = false
+tag-message = "{{crate_name}} version {{version}}"
 pre-release-replacements = [
   {file="README.md", search="stegosaurust \\d+\\.\\d+\\.\\d+", replace="{{crate_name}} {{version}}"},
   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
