--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ pretty-bytes = "0.2.2"
 tabled = "0.7.0"
 compression = "0.1.5"
 rust-embed = { version="6.4.0", features = ["include-flate"] }
+log = "0.4.6"
+env_logger = "0.9.0"
