initial refactor and start a simple ui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,17 @@ homepage = "https://github.com/jj-style/stegosaurust"
 documentation = "https://docs.rs/stegosaurust"
 keywords = ["steganography","secrets","hide","image"]
 
+[lib]
+name = "stegosaurust"
+path = "src/lib.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["cli", "ui"]
 
 [dependencies]
 image = "0.23.14"
 structopt = "0.3"
-anyhow = "1.0.57"
 thiserror = "1.0.31"
-atty = "0.2"
 base64 = "0.13.0"
 aes = "0.8.1"
 cbc = {version = "0.1.2", features = ["std"]}
@@ -28,8 +30,6 @@ rand_core = { version = "0.6", features = ["std"] }
 rand = "0.8.5"
 rand_pcg = "0.3.1"
 rand_seeder = "0.2.3"
-pretty-bytes = "0.2.2"
-tabled = "0.7.0"
 compression = "0.1.5"
 log = "0.4.6"
 env_logger = "0.9.0"
