pin rust toolchain to 1.65

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: 1.65
           override: true
 
       - run: cargo publish --token ${CRATES_TOKEN}
