--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -14,5 +14,6 @@ keywords = ["steganography","secrets","hide","image"]
 
 [dependencies]
 stegosaurust ={ path = ".." }
+stegosaurust_cli ={ path = "../cli" }
 iced ={ version = "0.7.0" }
 native-dialog = "0.6.3"
