--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,30 @@ log = "0.4.6"
 env_logger = "0.9.0"
 itertools-num = "0.1.3"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
+
+
+[profile.release]
+opt-level = 3
+debug = false
+split-debuginfo = '...'  # Platform-specific.
+strip = "debuginfo"
+debug-assertions = false
+overflow-checks = false
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 16
+rpath = false
+
+[profile.dev]
+opt-level = 0
+debug = true
+split-debuginfo = '...'  # Platform-specific.
+strip = "none"
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = true
+codegen-units = 256
+rpath = false
