--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ log = "0.4.6"
 env_logger = "0.9.0"
 itertools-num = "0.1.3"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
+openssl = { version = "0.10", features = ["vendored"] }
 
 
 [profile.release]
